--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Minia - React Admin & Dashboard Template</title>
+    <title>Tarifftales || Navigating Freight Costs with Precision||Ultimate Rate Management platform</title>
     <link
       rel="stylesheet"
       type="text/css"
